--- a/views/includes/head.ejs
+++ b/views/includes/head.ejs
@@ -10,6 +10,8 @@
 
 <!-- Vendors -->
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/css-percentage-circle@2.0.1/css/circle.css">
 
 <!-- Custom -->
 <link rel="stylesheet" type="text/css" href="/css/style.css"/>
