--- a/views/includes/navbar.ejs
+++ b/views/includes/navbar.ejs
@@ -1,13 +1,14 @@
-<nav class="navbar navbar-expand-lg fixed-top bg-dark text-white">
-    <a class="navbar-brand" href="#">GitHub Info</a>
+<nav class="navbar navbar-expand fixed-top navbar-custom sb-topnav">
+    <a class="navbar-brand" href="/">GitHub Info</a>
+    <button class="btn btn-link btn-sm order-1 order-lg-0" id="sidebarToggle" href="#">
+        <i class="fas fa-bars"></i>
+    </button>
     <div class="d-flex flex-row order-2 order-lg-3">
-        <a class="btn btn-success" href="/submit">Submit</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown">
             <span class="navbar-toggler-icon"></span>
         </button>
     </div>
     <div class="collapse navbar-collapse order-3 order-lg-2" id="navbarNavDropdown">
-        <ul class="navbar-nav mr-auto">
-        </ul>
+        <ul class="navbar-nav mr-auto"></ul>
     </div>
 </nav>
