--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -16,21 +16,14 @@
         <div id="sb-content">
             <main>
                 <div class="container-fluid">
-                    <div class="row">
-                        <div class="col">
-                            <h3>Projects</h3>
-                        </div>
-                        <div class="col-auto">
-                            <a class="btn btn-success ml-2" href="/add-projects">Add Projects</a>
-                        </div>
-                    </div>
+                    <h3>Projects</h3>
                     <hr/>
 
                     <div class="card shadow">
                         <div class="card-header">
                             <div class="row">
                                 <div class="col">
-                                    <h5 class="mt-2">Projects</h5>
+                                    <a class="btn btn-success ml-2" href="/add-projects">Add Projects</a>
                                 </div>
                                 <div class="col-auto">
                                     <form method="GET" action="/projects" class="form-inline">
@@ -46,60 +39,63 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-body">
-                            <div class="list-group">
+                        <div class="card-body pt-0">
 
-                                <% if (projects.length == 0) { %>
-                                    <li class="list-group-item">No Projects</li>
-                                <% } else { %>
+                            <div class="table-responsive">
+                                <table class="table mb-0">
+                                    <thead>
+                                        <tr>
+                                            <th style="width: 1px" class="text-center pr-3">Status</th>
+                                            <th>Project</th>
+                                            <th class="text-center">Message</th>
+                                            <th style="width: 1px"></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
 
-                                    <% projects.forEach(function(project, i){ %>
+                                        <% if (projects.length == 0) { %>
+                                            <tr>
+                                                <td colspan="4">No Projects</td>
+                                            </tr>
+                                        <% } else { %>
 
-                                        <div class="list-group-item">
-                                            <div class="row">
-                                                <div class="col-7">
-                                                    <div class="text-truncate">
-                                                        <a href="projects/<%= project.id %>"><%= project.url %></a>
-                                                    </div>
-                                                </div>
-                                                <div class="col-5">
-                                                    <div class="ml-2 text-right">
-                                                        <div class="text-truncate d-inline-block mr-2" style="max-width: 140px;">
-                                                            <div class="small">
-                                                                <%if (project.status == 1) {%>
-                                                                    <i class="far fa-clock"></i>
-                                                                    <span title="<%= project.status_message %>">
-                                                                        <%= project.status_message %>
-                                                                    </span>
-                                                                <%}%>
-                                                                <%if (project.status == 2) {%>
-                                                                    <i class="far fa-check text-success"></i>
-                                                                    <span class="text-success" title="<%= project.status_message %>">
-                                                                        <%= project.status_message %>
-                                                                    </span>
-                                                                <%}%>
-                                                                <%if (project.status == 3) {%>
-                                                                    <i class="far fa-times text-danger"></i>
-                                                                    <span class="text-danger" title="<%= project.status_message %>">
-                                                                        <%= project.status_message %>
-                                                                    </span>
-                                                                <%}%>
-                                                            </div>
+                                            <% projects.forEach(function(project, i){ %>
+                                                <tr>
+                                                    <td style="width: 1px" class="text-center pr-3">
+                                                        <%if (project.status == 1) {%>
+                                                            <i class="far fa-clock"></i>
+                                                        <%}%>
+                                                        <%if (project.status == 2) {%>
+                                                            <i class="fas fa-check-circle text-success"></i>
+                                                        <%}%>
+                                                        <%if (project.status == 3) {%>
+                                                            <i class="fas fa-exclamation-circle text-danger"></i>
+                                                        <%}%>
+                                                    </td>
+                                                    <td>
+                                                        <div class="text-truncate">
+                                                            <a href="projects/<%= project.id %>"><%= project.url %></a>
                                                         </div>
+                                                    </td>
+                                                    <td class="text-center">
+                                                        <span title="<%= project.status_message %>">
+                                                            <%= project.status_message %>
+                                                        </span>
+                                                    </td>
+                                                    <td style="width: 1px" class="pr-2">
                                                         <form method="POST" action="/projects/delete/<%= project.id %>" class="d-inline-block">
                                                             <a class="btn btn-sm btn-outline-danger pt-0 pb-0 btn-submit-parent" href="#">
                                                                 <i class="far fa-trash-alt"></i>
                                                             </a>
                                                         </form>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                                    </td>
+                                                </tr>
+                                            <% }); %>
 
-                                    <% }); %>
+                                        <% } %>
 
-                                <% } %>
-
+                                    </tbody>
+                                </table>
                             </div>
 
                             <div class="row mt-3">
